<resources>
    <!-- Auth -->
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="pay_on_account">Pay on Account</string>
    <string name="haulage">Haulage</string>
    <string name="unsynced_poa">Unsynced POA</string>
    <string name="unsynced_haulage">Unsynced Haulage</string>
    <string name="target">Target</string>

    <!-- Home -->
    <string name="operations_menu">Operations Menu</string>
    <string name="about">About</string>

    <!-- Pay bill -->
    <string name="enter_bill_ref_no">Enter bill ref no</string>
    <string name="payment_details">Payment details</string>
    <string name="bill_details">Bill details</string>
    <string name="bill_ref">Bill ref</string>
    <string name="bill_status">Bill status</string>
    <string name="bill_date">Bill date</string>
    <string name="bill_amount">Bill amount</string>
    <string name="bill_outstanding">Bill outstanding</string>
    <string name="tax_payer_details">Tax payer details</string>
    <string name="tax_payer_rin">Tax payer RIN</string>
    <string name="tax_payer_name">Tax payer name</string>
    <string name="tax_payer_type">Tax payer type</string>
    <string name="outstanding">Outstanding</string>
    <string name="settlement_history">Settlement history</string>
    <string name="settlement_date">Settlement date</string>
    <string name="settlement_amount">Settlement amount</string>

    <string name="assessment_rules">Assessment rules</string>
    <string name="mda_services">MDA services</string>

    <string name="amount_to_pay">Amount to pay</string>
    <string name="amount">Amount</string>
    <string name="pin">PIN</string>

    <string name="notes">Notes</string>
    <string name="pay">Pay</string>

    <!-- Pay on account -->
    <string name="menu_section">Menu section</string>
    <string name="group">Group</string>
    <string name="sub_group">Sub group</string>
    <string name="category">Category</string>
    <string name="expected_amount">Expected amount</string>
    <string name="tax_payer_mobile">Tax payer mobile</string>
    <string name="lga">Lga</string>
    <string name="address">Address</string>
    <string name="assessable_income">Assessable income</string>
    <string name="tax_assessed">Amount assessed</string>

    <string name="company">Company</string>
    <string name="individual">Individual</string>

    <string name="presumptive_taxes">Presumptive Taxes</string>
    <string name="vehicle_insurance_verification">Vehicle Insurance Verification</string>
    <string name="vehicle_license_renewal">Vehicle License Renewal</string>
    <string name="mobile_location">Mobile Location</string>

    <string name="select_group">Select group</string>
    <string name="select_sub_group">Select sub group</string>
    <string name="select_category">Select category</string>

    <string name="detach">Detach</string>
    <string name="submission">Submission</string>
    <string name="submission_details">Submission details</string>

    <string name="update_available">Update available</string>
    <string name="a_new_version_is_available">A new version of MPOA app is available. Please update app asap.</string>

    <!-- Haulage -->
    <string name="revenue_type">Revenue Type</string>
    <string name="beat">Beat</string>
    <string name="vehicle_reg_no">Vehicle Registration No</string>

    <!-- Target -->
    <string name="target_amount">Target Amount</string>
    <string name="achieved">Achieved</string>
    <string name="remaining">Remaining</string>

    <!-- Sync -->
    <string name="download">Download</string>
    <string name="download_x">Download %s</string>
    <string name="upload_x">Upload (%s)</string>
    <string name="upload">Upload</string>
    <string name="select_all">Select All</string>
    <string name="sync">Sync</string>
    <string name="scratch_card_denomination">Scratch Card Denomination</string>
    <string name="sync_expired">Please sync data before making more collections.</string>
    <string name="synchronizing">Synchronizing Data</string>
    <string name="syncing_in_progress">Syncing is in progress</string>
    <string name="sync_error">Synchronization Error</string>
    <string name="sync_error_desc">Some error occurred in sync. Please click here to restart sync.</string>
    <string name="msg_sync_error">Synchronization could not complete</string>
    <string name="sync_logout">Please sync data before logging out.</string>

    <!-- Common -->
    <string name="please_try_again">Please try again</string>
    <string name="msg_logout_confirm">Are you sure to logout</string>
    <string name="connection_error">Please check connection settings</string>
    <string name="error">Error</string>
    <string name="data_not_available">Data not available</string>
    <string name="required_field">Required field</string>
    <string name="loading">Loading</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="niara">\u20A6</string>
    <string name="enter_valid_phone">Enter 10 digit number without leading 0 or country code</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="space_error">Can not contain leading or trailing spaces</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Permissions -->
    <string name="permission_access_required">Access permission required</string>
    <string name="permission_is_required">%s permission is required to perform app operations seamlessly.</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="settings">Settings</string>
    <string name="printer_init_error">printer initialisation error</string>

</resources>
