<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.paybill.BillDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/AppTheme.ToolbarTitle" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_stroke_1dp_300dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/md_grey_100"
                        android:padding="8dp"
                        android:text="@string/bill_details"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <LinearLayout
                        android:id="@+id/viewBillRef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bill_ref"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/tvBillRef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/accent" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/pay_bill"
                            android:tint="@color/accent"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <LinearLayout
                        android:id="@+id/viewTaxPayerRin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tax_payer_rin"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/tvTaxPayerRin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/accent" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/pay_bill"
                            android:tint="@color/accent"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <LinearLayout
                        android:id="@+id/viewOutstanding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/outstanding"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/tvOutstanding"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/accent" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/pay_bill"
                            android:tint="@color/accent"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_stroke_1dp_300dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvItemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/md_grey_100"
                        android:padding="8dp"
                        android:text="@string/mda_services"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/emptyView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/data_not_available"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_stroke_1dp_300dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/md_grey_100"
                        android:padding="8dp"
                        android:text="@string/payment_details"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <LinearLayout
                        android:id="@+id/viewAmountToPay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/amount_to_pay"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/tvAmountToPay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/accent" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_300" />

                    <LinearLayout
                        android:id="@+id/viewPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/tvPinLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pin"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/tvPin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/accent" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/pay_bill"
                            android:tint="@color/accent"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pay"
                android:theme="@style/ButtonThemeAccent" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>