<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <me.himanshusoni.aspectratioview.AspectRatioLinearLayout-->
            <ng.gov.eirs.mas.erasmpoa.customviews.AspectRatioLinearLayout
                android:id="@+id/viewScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:aspectRatio="1.8">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/pin"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_qr_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/pin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </ng.gov.eirs.mas.erasmpoa.customviews.AspectRatioLinearLayout>
<!--            </me.himanshusoni.aspectratioview.AspectRatioLinearLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilScratchCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etScratchCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/pin"
                    android:inputType="number"
                    android:maxLength="16" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>